2006-11-03  Akim Demaille  <akim.demaille@free.fr>

	Fix -U
	* svn-externals: Fix handling of -U.

2006-11-03  Akim Demaille  <akim.demaille@free.fr>

	svn-externals: Accept dir list
	* svn-externals: Accept dir list.
	* build-aux.mk: Don't use $(top_srcdir) in EXTRA_DIST,
	Automake dislikes very much.

2006-11-03  Akim Demaille  <akim.demaille@free.fr>

	More typos.
	* urbi-dirs.m4: Quote the definition of urbiincludedir.

2006-11-03  Akim Demaille  <akim.demaille@free.fr>

	Bad typo
	* urbi-dirs.m4: urbiincludedir, not dire.

2006-11-03  Akim Demaille  <akim.demaille@free.fr>

	init.mk
	* urbi-dirs.m4 (urbiincludedir): New.
	* init.mk: New.

2006-11-02  SIGOURE Benoit  <sigoure.benoit@lrde.epita.fr>

	Fix last changes.
	* autotroll.mk: Take Automake's complain into account:
          "<: non-POSIX variable name".
	* autotroll.m4: AC_MSG_WARNING is AC_MSG_WARN.

2006-11-02  SIGOURE Benoit  <sigoure.benoit@lrde.epita.fr>

	Handle UIC, RCC and multiple Makefiles generated by qmake.
	* autotroll.mk: Additionnal implicit rules to compile interfaces (.ui)
          or Qt resources (.qrc).
	* autotroll.m4: Detect qrc (in $(QRC)). Update doc. Handle multiple
          Makefiles generated by qmake (Makefile.Debug, Makefile.Release...).

2006-11-01  Akim Demaille  <akim@lrde.epita.fr>

	Default is --without-openr
	* urbi-openr.m4: Do that.

2006-11-01  Akim Demaille  <akim@lrde.epita.fr>

	URBI_LIBPORT
	* urbi-libport.m4: New.

2006-10-31  Akim Demaille  <demaille@gostai.com>

	More external aliases
	* svn-externals (lurbi, uobj): New.
	More assertions.
	Unfortunately, in some situations I don't understand well yet,
	my exit 1 are ignored!

2006-10-31  Akim Demaille  <demaille@gostai.com>

	make help
	* build-aux.mk (help): New target.
	(SVN): New variable.
	Accept aliases of target names.

2006-10-31  Akim Demaille  <demaille@gostai.com>

	Extend URBI_FLOAT
	* urbi-ufloat.m4: Support 5 supports, tabulated or not.

2006-10-31  Akim Demaille  <demaille@gostai.com>
